--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ src="https://www.facebook.com/tr?id=857431976186273&ev=PageView&noscript=1"
         <div class="col-md-6 mx-auto text-center">
             <h2 class="header">ASIA'S NO1 TIPPER</h2>
             <h1 class="main"><i class="fa-solid fa-crown" style="color: rgba(246, 198, 7, 0.947);"></i> S I K A N D A R <i class="fa-solid fa-crown"  style="color: rgba(246, 198, 7, 0.947);"></i></h1>
-            <a href="https://t.me/+W0flW8U3NoU2NGY1" target="_blank" class="whatsapp-button">
+            <a href="https://t.me/+wfTbZ8lFqDEwMGY1" target="_blank" class="whatsapp-button">
                 <i class="fa-brands fa-telegram"></i>  
                 JOIN NOW FOR FREE
             </a> 
@@ -55,7 +55,7 @@ src="https://www.facebook.com/tr?id=857431976186273&ev=PageView&noscript=1"
             <h4 class="otherData"><i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i> FULL IPL, PSL, BBL, BBWL, WPL <i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i></h4>                        
             <h4 class="otherData"><i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i> Lifetime Free TOSS, MATCH & SESSION REPORT <i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i></h4>                        
 
-            <a href="https://t.me/+W0flW8U3NoU2NGY1" target="_blank" class="whatsapp-button">
+            <a href="https://t.me/+wfTbZ8lFqDEwMGY1" target="_blank" class="whatsapp-button">
                 <i class="fa-brands fa-telegram"></i> 
                 SUBSCRIBE NOW
             </a> 
