--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ src="https://www.facebook.com/tr?id=1118187299709562&ev=PageView&noscript=1"
     <div class="row h-100">
         <div class="col-md-6 mx-auto text-center">
             <h2 class="header">ASIA'S NO1 TIPPER</h2>
-            <h1 class="main"><i class="fa-solid fa-crown" style="color: rgba(246, 198, 7, 0.947);"></i> S I K A N D A R <i class="fa-solid fa-crown"  style="color: rgba(246, 198, 7, 0.947);"></i></h1>
+            <h1 class="main"><i class="fa-solid fa-crown" style="color: rgba(246, 198, 7, 0.947);"></i> Harry Kane <i class="fa-solid fa-crown"  style="color: rgba(246, 198, 7, 0.947);"></i></h1>
             <a href="https://t.me/+yOiwODMnnFJlNDM1" target="_blank" class="whatsapp-button">
                 <i class="fa-brands fa-telegram"></i>  
                 JOIN NOW FOR FREE
